--- a/src/app/Pages/assessmentsreport/assessmentsreport.component.html
+++ b/src/app/Pages/assessmentsreport/assessmentsreport.component.html
@@ -366,14 +366,14 @@
               >
                 <i class="fa-solid fa-file-pdf me-1"></i>Certificates
               </button>
-              <!-- <button
+              <button
                 class="btn btn-warning ms-1"
                 type="button"
                 (click)="downloadWordSummery()"
                 title="Download Driver Summery"
               >
                 <i class="fa-solid fa-file-word me-1"></i>Summery
-              </button> -->
+              </button>
               <button
                 class="btn btn-warning ms-1"
                 type="button"
