--- a/src/app/Widgets/profile/profile.component.html
+++ b/src/app/Widgets/profile/profile.component.html
@@ -62,12 +62,12 @@
           <div class="row">
             <div class="col-3">
               <div class="mb-3">
-                <label for="name" class="form-label">Full Name</label>
+                <label for="fullname" class="form-label">Full Name</label>
                 <input
-                  name="name"
+                  name="fullname"
                   type="text"
                   class="form-control"
-                  id="name"
+                  id="fullname"
                   placeholder="Muhammad Ibraheem"
                   formControlName="name"
                 />
