--- a/src/app/Pages/allassessments/allassessments.component.html
+++ b/src/app/Pages/allassessments/allassessments.component.html
@@ -11,7 +11,10 @@
     </div>
     <div class="col-auto">
       <h2>All Assessments</h2>
-      <p>You can select it by navigating one by one and edit it (if needed):</p>
+      <p>
+        You can choose the assessment, then access its detail page to make any
+        necessary edits:
+      </p>
     </div>
   </div>
   <hr />
