--- a/src/app/Pages/alltrainings/alltrainings.component.html
+++ b/src/app/Pages/alltrainings/alltrainings.component.html
@@ -12,7 +12,10 @@
     </div>
     <div class="col-auto">
       <h2>All Training</h2>
-      <p>You can select it by navigating one by one and edit it (if needed):</p>
+      <p>
+        You can choose the training, then access its detail page to make any
+        necessary edits:
+      </p>
     </div>
   </div>
   <hr />
@@ -30,7 +33,7 @@
             type="text"
             class="form-control form-control-sm my-inputextend"
             id="inlineFormInputGroupid"
-            placeholder="Load-33/2425"
+            placeholder="CNTT-20250226-40"
             formControlName="name"
           />
         </div>
