--- a/src/app/Pages/guestdashboard/guestdashboard.component.html
+++ b/src/app/Pages/guestdashboard/guestdashboard.component.html
@@ -11,10 +11,7 @@
     </div>
     <div class="col-auto">
       <h2>Dashboard</h2>
-      <p>
-        You can search driver driver defencive course by driver's N.I.C # (if
-        needed):
-      </p>
+      <p>You can search candidate by N.I.C. # (if needed):</p>
     </div>
   </div>
   <hr />
