--- a/src/app/Pages/industries/industries.component.html
+++ b/src/app/Pages/industries/industries.component.html
@@ -45,8 +45,8 @@
       <tr>
         <th>#</th>
         <th>ID</th>
-        <th>Title Name</th>
-        <th>Title Description</th>
+        <th>Industry Name</th>
+        <th>Description</th>
         <th>Created By</th>
         <th>Created Date</th>
         <th>Action</th>
