--- a/src/app/Pages/location/location.component.html
+++ b/src/app/Pages/location/location.component.html
@@ -41,7 +41,7 @@
         <th>#</th>
         <th>ID</th>
         <th>Location Name</th>
-        <th>Location Description</th>
+        <th>Description</th>
         <th>Created By</th>
         <th>Created Date</th>
         <th>Action</th>
