--- a/src/app/Pages/result/result.component.html
+++ b/src/app/Pages/result/result.component.html
@@ -36,7 +36,7 @@
         <th>#</th>
         <th>ID</th>
         <th>Result Name</th>
-        <th>Result Description</th>
+        <th>Description</th>
         <th>Created By</th>
         <th>Created Date</th>
         <th>Action</th>
