--- a/src/app/Pages/trainers/trainers.component.html
+++ b/src/app/Pages/trainers/trainers.component.html
@@ -2,12 +2,7 @@
   <hr />
   <div class="row">
     <div class="col-auto">
-      <img
-        src="img/assessment.jpg"
-        alt="Trainer"
-        width="180px"
-        height="150px"
-      />
+      <img src="img/trainer.jpg" alt="Trainer" width="180px" height="150px" />
     </div>
     <div class="col-auto">
       <h2>Trainers</h2>
