--- a/src/app/Pages/alldrivers/alldrivers.component.html
+++ b/src/app/Pages/alldrivers/alldrivers.component.html
@@ -13,7 +13,10 @@
     </div>
     <div class="col-auto">
       <h2>All Drivers</h2>
-      <p>You can select it by navigating one by one and edit it (if needed):</p>
+      <p>
+        You can choose the driver, then access its detail page to make any
+        necessary edits:
+      </p>
     </div>
   </div>
   <hr />
