--- a/src/app/Pages/assessmentdetail/assessmentdetail.component.html
+++ b/src/app/Pages/assessmentdetail/assessmentdetail.component.html
@@ -10,9 +10,139 @@
     </div>
   </div>
   } @if (!isLoading()) {
+  <div class="form-group small">
+    <hr />
+    <div class="row">
+      <div class="col-auto">
+        <img
+          src="img/assessment.jpg"
+          alt="Assessment"
+          width="200px"
+          height="150px"
+        />
+      </div>
+
+      <div class="col-auto">
+        <h3>
+          <i
+            title="Protocol"
+            class="fa-solid fa-umbrella me-1 text-warning"
+          ></i>
+          @if (assessmentForm.get('formid')?.value==16001) {U.E.P Protocol}
+          @else{ C&T Protocol }
+        </h3>
+
+        <p class="mb-1">
+          <i
+            title="AssessmentDBID"
+            class="fa-regular fa-id-badge me-1 text-warning"
+          ></i
+          >{{ sessionID }}
+        </p>
+        <p class="mb-1">
+          <i
+            title="Total Score"
+            class="fa-solid fa-square-poll-horizontal me-1 text-warning"
+          ></i
+          >{{ sessionDetail()?.totalscore }}
+        </p>
+        <p class="mb-1">
+          <i
+            title="Created By"
+            class="fa-solid fa-user-tie me-2 text-warning"
+          ></i
+          >{{ sessionDetail()?.createdby }}
+          <i
+            title="Created Date"
+            class="fa-solid fa-thumbtack me-1 text-warning"
+          ></i
+          >{{ sessionDetail()?.created_at | date }}
+        </p>
+        <p class="mb-1">
+          <i
+            title="Modified By"
+            class="fa-solid fa-user-pen me-1 text-warning"
+          ></i
+          >{{ sessionDetail()?.modifiedby }}
+          <i
+            title="Modified Date"
+            class="fa-solid fa-thumbtack me-1 text-warning"
+          ></i
+          >{{ sessionDetail()?.modified_at | date }}
+        </p>
+      </div>
+      <div class="mb-3 col-auto">
+        <button
+          class="btn btn-outline-warning btn-sm ms-1"
+          type="button"
+          routerLink="/addassessment"
+          title="Add Assessment"
+        >
+          <i class="fa-solid fa-circle-plus"></i>
+          Add New Assessment
+        </button>
+        <button
+          class="btn btn-outline-warning btn-sm ms-1"
+          type="button"
+          (click)="printPage()"
+          title="Print page"
+        >
+          <i class="fa-solid fa-print"></i>
+          Print
+        </button>
+        @if (isEdit()) {
+        <button
+          id="savebtn"
+          class="btn btn-outline-warning btn-sm ms-1"
+          type="submit"
+          (click)="saveAssessment(); toggleEdit()"
+          title="Save DDC Form"
+        >
+          <i class="fa-regular fa-floppy-disk"></i>
+          @if (isAPICallInProgress()) {
+          <span
+            class="spinner-border spinner-border-sm"
+            aria-hidden="true"
+          ></span>
+          <span role="status">Loading...</span>
+          } Save
+        </button>
+
+        <button
+          type="reset"
+          class="btn btn-outline-warning btn-sm ms-1"
+          (click)="formRest()"
+          title="Reset changes"
+        >
+          <i class="fa-solid fa-window-restore"></i>
+          Reset
+        </button>
+        <button
+          class="btn btn-outline-warning btn-sm ms-1"
+          (click)="toggleEdit()"
+          title="Cancel"
+        >
+          <i class="fa-regular fa-rectangle-xmark"></i>
+          cancel
+        </button>
+        }@else{
+        <button
+          class="btn btn-outline-warning btn-sm ms-1"
+          type="button"
+          (click)="toggleEdit()"
+          title="Edit Assessment"
+        >
+          <i class="far fa-edit"></i>
+
+          {{ "Edit" }}
+        </button>
+        }
+      </div>
+    </div>
+  </div>
+  <hr />
   <div class="bg-success bg-opacity-50 fs-7 fw-medium mt-3">
     <h6 class="ms-3">Driver Information</h6>
-
     <form
       [formGroup]="driverForm"
       class="row row-cols-lg-auto g-3 align-items-end ms-1"
@@ -585,26 +715,39 @@
         </div>
         }
       </div>
-      <div class="col-lg-4 col-md-6 col-sm-12 fs-7">
-        <i title="Created By" class="fa-solid fa-user-tie me-2 text-warning"></i
-        >{{ sessionDetail()?.createdby }}
-        <i
-          title="Created Date"
-          class="fa-solid fa-thumbtack me-1 text-warning"
-        ></i
-        >{{ sessionDetail()?.created_at | date }}
-
-        <i
-          title="Modified By"
-          class="fa-solid fa-user-pen ms-1 me-1 text-warning"
-        ></i
-        >{{ sessionDetail()?.modifiedby }}
-        <i
-          title="Modified Date"
-          class="fa-solid fa-thumbtack me-1 text-warning"
-        ></i
-        >{{ sessionDetail()?.modified_at | date }}
+      <div class="col-lg-4 col-md-6 col-sm-12">
+        @if (!showInitial()) {
+        <button
+          (click)="toggleInitial()"
+          class="btn btn-sm btn-outline-secondary float-end"
+          title="Add Initial Assessment Column"
+        >
+          <i class="fa-solid fa-circle-plus"></i> Initial Assessment
+        </button>
+        } @if (showInitial() && !showMiddle()) {
+        <button
+          (click)="toggleMiddle()"
+          class="btn btn-sm btn-outline-secondary float-end"
+          title="Add Middle Assessment Column"
+        >
+          <i class="fa-solid fa-circle-plus"></i> Middle Assessment
+        </button>
+        } @if (showMiddle()) {<button
+          (click)="toggleMiddle()"
+          class="btn btn-sm btn-outline-secondary float-end"
+          title="Remove Middle Assessment Column"
+        >
+          <i class="fa-solid fa-xmark"></i> Remove Middle</button
+        >} @if (showInitial()) {<button
+          (click)="toggleInitial()"
+          class="btn btn-sm btn-outline-secondary float-end"
+          title="Remove All Assessment Columns"
+        >
+          <i class="fa-solid fa-xmark"></i> Remove All</button
+        >}
       </div>
+
+      <hr />
     </div>
     <div formArrayName="categories">
       @for (category of categories.controls; track $index;let i = $index) {
@@ -689,8 +832,11 @@
                                   <tr>
                                     <th>Assessment Description</th>
                                     <th>Ini</th>
+                                    @if (showInitial()) {
                                     <th>Initial Score</th>
+                                    } @if (showMiddle()) {
                                     <th>Middle Score</th>
+                                    }
                                     <th>Final Score</th>
                                   </tr>
                                 </thead>
@@ -709,12 +855,10 @@
                                       {{ slavecategory.get("initials")?.value
                                       }}{{ activity.get("initials")?.value }}
                                     </td>
-
+                                    @if (showInitial()) {
                                     <td style="width: 80px">
                                       <input
-                                        type="number"
-                                        min="0"
-                                        max="1"
+                                        type="text"
                                         class="score-input"
                                         name="initial"
                                         formControlName="scoreInitial"
@@ -726,13 +870,10 @@
                                         "
                                       />
                                     </td>
-
+                                    } @if (showMiddle()) {
                                     <td style="width: 80px">
                                       <input
-                                        type="number"
-                                        min="0"
-                                        max="1"
-                                        maxlength="1"
+                                        type="text"
                                         class="score-input"
                                         name="middle"
                                         formControlName="scoreMiddle"
@@ -744,13 +885,10 @@
                                         "
                                       />
                                     </td>
-
+                                    }
                                     <td style="width: 80px">
                                       <input
-                                        type="number"
-                                        min="0"
-                                        max="5"
-                                        maxlength="1"
+                                        type="text"
                                         class="score-input"
                                         name="final"
                                         formControlName="scoreFinal"
