--- a/src/app/Pages/category/category.component.html
+++ b/src/app/Pages/category/category.component.html
@@ -35,7 +35,7 @@
       <tr>
         <th>#</th>
         <th>ID</th>
-        <th>Course Name</th>
+        <th>Category Name</th>
         <th>Description</th>
         <th>Created By</th>
         <th>Created Date</th>
