--- a/src/app/Pages/stage/stage.component.html
+++ b/src/app/Pages/stage/stage.component.html
@@ -36,7 +36,7 @@
         <th>#</th>
         <th>ID</th>
         <th>Stage Name</th>
-        <th>Stage Description</th>
+        <th>Description</th>
         <th>Created By</th>
         <th>Created Date</th>
         <th>Action</th>
