--- a/src/app/Pages/title/title.component.html
+++ b/src/app/Pages/title/title.component.html
@@ -36,7 +36,7 @@
         <th>#</th>
         <th>ID</th>
         <th>Title Name</th>
-        <th>Title Description</th>
+        <th>Description</th>
         <th>Created By</th>
         <th>Created Date</th>
         <th>Action</th>
