--- a/src/app/Pages/vehicle/vehicle.component.html
+++ b/src/app/Pages/vehicle/vehicle.component.html
@@ -36,7 +36,7 @@
         <th>#</th>
         <th>ID</th>
         <th>Vehicle Name</th>
-        <th>Vehicle Description</th>
+        <th>Description</th>
         <th>Created By</th>
         <th>Created Date</th>
         <th>Action</th>
