--- a/src/app/Pages/visual/visual.component.html
+++ b/src/app/Pages/visual/visual.component.html
@@ -36,7 +36,7 @@
         <th>#</th>
         <th>ID</th>
         <th>Visual Name</th>
-        <th>Visual Description</th>
+        <th>Description</th>
         <th>Created By</th>
         <th>Created Date</th>
         <th>Action</th>
