--- a/src/app/Pages/trainingdetail/trainingdetail.component.html
+++ b/src/app/Pages/trainingdetail/trainingdetail.component.html
@@ -81,9 +81,9 @@
               type="submit"
               class="btn btn-outline-primary btn-sm ms-1"
               (click)="openSearchModal()"
-              title="Session Search Modal"
+              title="Assessment Search Modal"
             >
-              <i class="fa-regular fa-circle-user me-1"></i>Select Sessions
+              <i class="fa-regular fa-circle-user me-1"></i>Select Assessment
             </button>
             @if (isEdit) {
             <button
