--- a/src/app/Widgets/sessionsearch/sessionsearch.component.html
+++ b/src/app/Widgets/sessionsearch/sessionsearch.component.html
@@ -9,7 +9,7 @@
     <div class="modal-content">
       <div class="modal-header bg-info-subtle">
         <h6 class="modal-title" id="sessionSearchModalLabel">
-          <i class="fa-solid fa-plus"></i> Add Session
+          <i class="fa-solid fa-plus"></i> Add Assessment
         </h6>
         <app-toast></app-toast>
         <button
@@ -48,17 +48,26 @@
         <table class="table table-hover table-bordered mt-2 fs-7">
           <thead class="table-primary">
             <tr>
-              <th>ID</th>
+              <th>Sr #.</th>
+              <th>DBID</th>
               <th>Session ID</th>
               <th>Session Date</th>
               <th>Driver Name</th>
               <th>N.I.C #</th>
-              <th>Select</th>
+              <th>
+                <input
+                  type="checkbox"
+                  [checked]="selectAll"
+                  (change)="selectAll = !selectAll; toggleSelectAll()"
+                />
+                Select ALL
+              </th>
             </tr>
           </thead>
           <tbody>
             @for (item of sessions(); track $index) {
             <tr>
+              <td>{{ $index + 1 }}</td>
               <td>{{ item.id }}</td>
               <td>{{ item.name }}</td>
               <td>{{ item.sessiondate | date }}</td>
