Added charts and update training id

--- a/src/app/Pages/assessmentdetail/assessmentdetail.component.html
+++ b/src/app/Pages/assessmentdetail/assessmentdetail.component.html
@@ -28,8 +28,8 @@
             title="Protocol"
             class="fa-solid fa-umbrella me-1 text-warning"
           ></i>
-          @if (assessmentForm.get('formid')?.value==16001) {U.E.P Protocol}
-          @else{ C&T Protocol }
+          @if (assessmentForm.get('formid')?.value==16001) {UEP Protocol} @else{
+          C&T Protocol }
         </h3>
 
         <p class="mb-1">
