--- a/src/app/Pages/trainingsreport/trainingsreport.component.html
+++ b/src/app/Pages/trainingsreport/trainingsreport.component.html
@@ -17,9 +17,50 @@
   <hr />
   <app-toast></app-toast>
   <div class="row">
+    <div class="col-lg-6 col-md-6 col-sm-12">
+      <div class="card mb-4">
+        <div class="card-body bg-primary bg-opacity-50">
+          <h5 class="card-title">Yearly Trainings Count</h5>
+          <div id="chart1">
+            <apx-chart
+              [series]="trendTrainings.series"
+              [chart]="trendTrainings.chart"
+              [dataLabels]="trendTrainings.dataLabels"
+              [plotOptions]="trendTrainings.plotOptions"
+              [yaxis]="trendTrainings.yaxis"
+              [xaxis]="trendTrainings.xaxis"
+              [fill]="trendTrainings.fill"
+              [title]="trendTrainings.title"
+            ></apx-chart>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-6 col-md-6 col-sm-12">
+      <div class="card mb-4">
+        <div class="card-body bg-primary bg-opacity-50">
+          <h5 class="card-title">Yearly Clients Trainings</h5>
+          <div id="chart2">
+            <apx-chart
+              [series]="trendTrainingsStacked.series"
+              [chart]="trendTrainingsStacked.chart"
+              [dataLabels]="trendTrainingsStacked.dataLabels"
+              [plotOptions]="trendTrainingsStacked.plotOptions"
+              [responsive]="trendTrainingsStacked.responsive"
+              [xaxis]="trendTrainingsStacked.xaxis"
+              [legend]="trendTrainingsStacked.legend"
+              [fill]="trendTrainingsStacked.fill"
+            ></apx-chart>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <hr />
+  <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12">
       <div class="card mb-4">
-        <div class="card-body bg-primary bg-opacity-75 text-white">
+        <div class="card-body bg-primary bg-opacity-50">
           <h5 class="card-title">Training Report All</h5>
           <form [formGroup]="formAll">
             <div class="row my-2">
@@ -219,7 +260,7 @@
     <div class="col-lg-3 col-md-6 col-sm-12">
       <form [formGroup]="formFinance">
         <div class="card mb-4">
-          <div class="card-body bg-primary bg-opacity-75 text-white">
+          <div class="card-body bg-primary bg-opacity-50">
             <h5 class="card-title">Financial Report By Month</h5>
             <div class="card-text">
               <div class="row g-3 align-items-center">
@@ -279,10 +320,13 @@
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="card mb-4">
-        <div class="card-body bg-primary bg-opacity-75 text-white">
+        <div class="card-body bg-primary bg-opacity-50">
           <h5 class="card-title">Training Report</h5>
           <p class="card-text">
-            <select class="form-select form-select-sm" id="driverexpiry2">
+            <select
+              class="form-select form-select-sm border border-primary border-3"
+              id="driverexpiry2"
+            >
               <option selected>-----Select-----</option>
             </select>
           </p>
@@ -299,10 +343,13 @@
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="card mb-4">
-        <div class="card-body bg-primary bg-opacity-75 text-white">
+        <div class="card-body bg-primary bg-opacity-50">
           <h5 class="card-title">Training Report</h5>
           <p class="card-text">
-            <select class="form-select form-select-sm" id="driverexpiry3">
+            <select
+              class="form-select form-select-sm border border-primary border-3"
+              id="driverexpiry3"
+            >
               <option selected>-----Select-----</option>
             </select>
           </p>
@@ -319,10 +366,13 @@
     </div>
     <div class="col-lg-3 col-md-6 col-sm-12">
       <div class="card mb-4">
-        <div class="card-body bg-primary bg-opacity-75 text-white">
+        <div class="card-body bg-primary bg-opacity-50">
           <h5 class="card-title">Training Report</h5>
           <p class="card-text">
-            <select class="form-select form-select-sm" id="driverexpiry4">
+            <select
+              class="form-select form-select-sm border border-primary border-3"
+              id="driverexpiry4"
+            >
               <option selected>-----Select-----</option>
               <option value="To be built">To be built</option>
             </select>
