Plandate, driver search via permitissue, amountreceiveddate new field added

--- a/src/app/Pages/adddriver/adddriver.component.html
+++ b/src/app/Pages/adddriver/adddriver.component.html
@@ -170,7 +170,7 @@
             />
           </div>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-12 mt-2">
+        <div class="col-lg-3 col-md-4 col-sm-12 mt-2 required">
           <label class="label ms-1" for="permitissue">Permit Issue</label>
           <input
             class="form-control form-control-sm"
