--- a/src/app/Pages/driverdetail/driverdetail.component.html
+++ b/src/app/Pages/driverdetail/driverdetail.component.html
@@ -327,7 +327,7 @@
                 formControlName="permitnumber"
               />
             </div>
-            <label for="permitissue" class="col-sm-1 col-form-label"
+            <label for="permitissue" class="col-sm-1 col-form-label required"
               >Permit Issue:</label
             >
             <div class="col-lg-3 col-md-5 col-sm-11 mt-2">
