--- a/src/app/Pages/trainingdetail/trainingdetail.component.html
+++ b/src/app/Pages/trainingdetail/trainingdetail.component.html
@@ -153,7 +153,9 @@
               </div>
               }
             </div>
-            <label for="courceTitle" class="col-sm-1 col-form-label mt-2"
+            <label
+              for="courceTitle"
+              class="col-sm-1 col-form-label mt-2 required"
               >Course Title:</label
             >
             <div class="col-lg-3 col-md-5 col-sm-11 mt-2">
@@ -183,7 +185,7 @@
                 }
               </select>
             </div>
-            <label for="plandate" class="col-sm-1 col-form-label mt-2"
+            <label for="plandate" class="col-sm-1 col-form-label mt-2 required"
               >Plan Date:</label
             >
             <div class="col-lg-3 col-md-5 col-sm-11 mt-2">
@@ -416,8 +418,19 @@
                 placeholder="Cheque Number"
               />
             </div>
+            <label for="paymentdate" class="col-sm-1 col-form-label mt-2"
+              >Received Date:</label
+            >
+            <div class="col-lg-3 col-md-5 col-sm-11 mt-2 mb-2">
+              <input
+                id="paymentdate"
+                type="date"
+                class="form-control form-control-sm"
+                formControlName="amountreceiveddate"
+              />
+            </div>
             <label for="payment" class="col-sm-1 col-form-label mt-2"
-              >Received:</label
+              >Received Amount:</label
             >
             <div class="col-lg-3 col-md-5 col-sm-11 mt-2 mb-2">
               <input
